# MNKSQL

./: .gitignore  CMakeLists.txt  main.cpp  ninja-build.ps1
DataBases/: fer.txt  rr.txt  students.txt
MNKSQL_DRG/: startDrg.cpp  startDrg.h
MNKSQL_DRG/bootstrap/: configHandler.cpp  configHandler.h
MNKSQL_DRG/bootstrap/globals/: globalLanguage.cpp  globalLanguage.h
MNKSQL_DRG/constants/: paths.h
MNKSQL_DRG/data/: logo.txt
MNKSQL_DRG/database/dataStore/: dataStore.cpp  dataStore.h
MNKSQL_DRG/menuLogic/admin/: admin.cpp  admin.h
MNKSQL_DRG/menuLogic/adminLoad/: adminLoad.cpp  adminLoad.h
MNKSQL_DRG/menuLogic/convert/: convert.cpp  convert.h
MNKSQL_DRG/menuLogic/core/: core.cpp  core.h  events.cpp  events.h  menuType.cpp  menuType.h
MNKSQL_DRG/menuLogic/language/: language.cpp  language.h
MNKSQL_DRG/menuLogic/main/: main.cpp  main.h
MNKSQL_DRG/menuLogic/save/: save.cpp  save.h
MNKSQL_DRG/menuLogic/user/: user.cpp  user.h
MNKSQL_DRG/menuLogic/userLoad/: userLoad.cpp  userLoad.h
MNKSQL_DRG/utils/: checkers.cpp  checkers.h  console.cpp  console.h  helper.cpp  helper.h
MNKSQL_DRG/utils/checkers/: checkers.cpp  checkers.h
MNKSQL_DRG/utils/console/: console.cpp  console.h
MNKSQL_DRG/utils/emailSender/: emailSender.cpp  emailSender.h
MNKSQL_DRG/utils/helper/: helper.cpp  helper.h
MNKSQL_MAIN/: startMain.cpp  startMain.h
MNKSQL_MAIN/commands/column/: commandCol.cpp
MNKSQL_MAIN/commands/core/: commandCore.h
MNKSQL_MAIN/commands/database/: commandDb.cpp  commandDb.h
MNKSQL_MAIN/constants/: messages.h  paths.h  symbols.h  types.h
MNKSQL_MAIN/database/: container.h  dataStore.cpp  descriptor.cpp
MNKSQL_MAIN/logic/: helper.h  parser.h  path.cpp
commands/: commandCol.cpp  commandCol.h  commandCore.cpp  commandCore.h  commandDb(t).cpp  commandDb(t).h  commandDb.cpp  commandDb.h  commandFile.cpp  commandFile.h  commandHelp.cpp  commandHelp.h  commandLoad.h  commandRow.cpp  commandRow.h  commandSave.cpp  commandView.cpp  commandView.h  command_col.cpp  command_core.cpp  command_db.cpp  command_help.cpp  command_row.cpp  command_sort.cpp
commands/column/: commandCol.cpp  commandCol.h
commands/core/: commandCore.cpp  commandCore.h
commands/database/: commandDb.cpp  commandDb.h
commands/exit/: commandExit.cpp  commandExit.h
commands/file/: commandFile.cpp  commandFile.h
commands/help/: commandHelp.cpp  commandHelp.h
commands/load/: commandLoad.cpp  commandLoad.h
commands/password/: commandPwd.cpp  commandPwd.h
commands/row/: commandRow.cpp  commandRow.h
commands/save/: commandSave.cpp  commandSave.h
commands/view/: commandView.cpp
constants/: messages.h  paths.h  symbols.h  types.h
content/: constants.h  globals.cpp  globals.h  help.txt
data/: help.txt  logo.txt
database/: container.cpp  dataStore.cpp  dataStore.h  database.cpp  database.h  descriptor.cpp  descriptor.h
database/student22/: student22.cpp  student22.h
logic/: helper.cpp  helper.h  parser.cpp  parser.h  path.cpp  path.h  smartFile.cpp  smartFile.h
tables/: readme.txt
utils/: utilsCommandPwd.cpp  utilsCommandRow.cpp  utilsCommandRow.h  utilsDb.cpp  utilsDb.h  utilsFile.cpp  utilsFile.h  utilsRow.cpp  utilsRow.h  utilsShow.cpp  utilsShow.h  utilsTable.cpp
utils/row/: utilsCommandRow.cpp
utils/table/: utilsTable.cpp
validators/: validateFile.cpp  validateFile.h
validators/column/: validateCol.cpp  validateCol.h
validators/database/: validateDb.cpp
validators/file/: validateFile.cpp  validateFile.h
validators/password/: validatePwd.cpp  validatePwd.h
validators/row/: validateRow.cpp  validateRow.h
(+81 files in other folders)
