cmake_minimum_required(VERSION 4.0.0)

project(MNKSQL)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS True)
set(CMAKE_CXX_EXTENSIONS false)

set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
set(BUILD_SHARED_LIBS OFF)

file(GLOB_RECURSE SOURCES 
    "MNKSQL_MAIN/*.cpp"
    "MNKSQL_DRG/*.cpp"
    "main.cpp"
)
add_executable(MNKSQL ${SOURCES})

file(GLOB MNKSQL_MAIN_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_MAIN/*")
file(GLOB COMMAND_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_MAIN/commands/*")
file(GLOB VALIDATOR_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_MAIN/validators/*")
file(GLOB UTILS_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_MAIN/utils/*")

file(GLOB MNKSQL_DRG_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_DRG/*")
file(GLOB MENU_LOGIC_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_DRG/menuLogic/*")
file(GLOB MENU_CORE_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_DRG/menuLogic/core/*")

target_include_directories(MNKSQL PRIVATE
    "MNKSQL_MAIN/"
    ${MNKSQL_MAIN_DIRS}
    ${COMMAND_DIRS}
    ${VALIDATOR_DIRS}
    ${UTILS_DIRS}

    "MNKSQL_DRG/"
    ${MNKSQL_DRG_DIRS}
    ${MENU_LOGIC_DIRS}
    ${MENU_CORE_DIRS}
    )