cmake_minimum_required(VERSION 4.0.0)

project(MNKSQL)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS True)
set(CMAKE_CXX_EXTENSIONS false)

file(GLOB_RECURSE SOURCES 
    "${CMAKE_SOURCE_DIR}/MNKSQL_MAIN/*.cpp"
    "${CMAKE_SOURCE_DIR}/MNKSQL_DRG/*.cpp"
    "${CMAKE_SOURCE_DIR}/main.cpp"
)
add_executable(MNKSQL ${SOURCES})

file(GLOB MNKSQL_MAIN_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_MAIN/*")
file(GLOB COMMAND_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_MAIN/commands/*")
file(GLOB VALIDATOR_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_MAIN/validators/*")
file(GLOB UTILS_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_MAIN/utils/*")

file(GLOB MNKSQL_DRG_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_DRG/*")
file(GLOB MENU_LOGIC_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_DRG/menuLogic/*")
file(GLOB MENU_CORE_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_DRG/menuLogic/core/*")
file(GLOB DRG_UTILS_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_DRG/utils/*")
file(GLOB DRG_CONST_DIRS "${CMAKE_SOURCE_DIR}/MNKSQL_DRG/constants/*")

target_include_directories(MNKSQL PRIVATE
    "MNKSQL_MAIN/"
    ${MNKSQL_MAIN_DIRS}
    ${COMMAND_DIRS}
    ${VALIDATOR_DIRS}
    ${UTILS_DIRS}

    "MNKSQL_DRG/"
    ${MNKSQL_DRG_DIRS}
    ${MENU_LOGIC_DIRS}
    ${MENU_CORE_DIRS}
    ${DRG_UTILS_DIRS}
    ${DRG_CONST_DIRS}
    )

find_package(Threads REQUIRED)
target_link_libraries(MNKSQL PRIVATE Threads::Threads)